Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26136

Creator hangs in QtcProcess machinery on start-up

    XMLWordPrintable

Details

    • Linux/X11
    • 43de2deebcf9e3cbbfb88c381ce154b0721a544d (qt-creator/qt-creator/master)

    Description

      Stack trace for main thread always looks like this:

      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9574 in pthread_cond_timedwait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      #2  0x00007fc0d4b8f000 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /usr/lib/libQt5Core.so.5
      #3  0x00007fc0d4b8f119 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
      #4  0x00007fc0d613c109 in Utils::Internal::LauncherHandle::doWaitForSignal(int, Utils::Internal::LauncherHandle::SignalType) (this=0x55cc69e16ff0, msecs=9999, newSignal=Utils::Internal::LauncherHandle::SignalType::Started) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/launchersocket.cpp:307
      #5  0x00007fc0d613bf98 in Utils::Internal::LauncherHandle::waitForSignal(int, Utils::Internal::LauncherHandle::SignalType) (this=0x55cc69e16ff0, msecs=10000, newSignal=Utils::Internal::LauncherHandle::SignalType::Started) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/launchersocket.cpp:275
      #6  0x00007fc0d618ae95 in Utils::Internal::LauncherHandle::waitForStarted(int) (this=0x55cc69e16ff0, msecs=10000) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/launchersocket.h:67
      #7  0x00007fc0d618c89e in Utils::Internal::ProcessLauncherImpl::waitForStarted(int) (this=0x55cc69e12570, msecs=10000) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/qtcprocess.cpp:305
      #8  0x00007fc0d6187d67 in Utils::QtcProcess::waitForStarted(int) (this=0x7ffd6caf8000, msecs=10000) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/qtcprocess.cpp:901
      #9  0x00007fc0d61897db in Utils::QtcProcess::runBlocking() (this=0x7ffd6caf8000) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/utils/qtcprocess.cpp:1234
      #10 0x00007fc0aa1f1905 in Debugger::DebuggerItem::reinitializeFromFile(Utils::Environment const&, QString*) (this=0x7ffd6caf8190, sysEnv=..., error=0x0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggeritem.cpp:192
      #11 0x00007fc0aa1fb90e in Debugger::Internal::DebuggerItemManagerPrivate::autoDetectGdbOrLldbDebuggers(Utils::FilePath const&, QString const&, QString*) (this=0x55cc69e04ba0, deviceRoot=..., detectionSource=..., logMessage=0x0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggeritemmanager.cpp:804
      #12 0x00007fc0aa1fdb74 in Debugger::Internal::DebuggerItemManagerPrivate::restoreDebuggers() (this=0x55cc69e04ba0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggeritemmanager.cpp:963
      #13 0x00007fc0aa1fc942 in Debugger::Internal::DebuggerItemManagerPrivate::DebuggerItemManagerPrivate() (this=0x55cc69e04ba0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggeritemmanager.cpp:870
      #14 0x00007fc0aa1fdfd8 in Debugger::DebuggerItemManager::DebuggerItemManager() (this=0x55cc69dd6648) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggeritemmanager.cpp:996
      #15 0x00007fc0aa225393 in Debugger::Internal::DebuggerPluginPrivate::DebuggerPluginPrivate(QStringList const&) (this=0x55cc69dd5930, arguments=...) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggerplugin.cpp:723
      #16 0x00007fc0aa233a39 in Debugger::Internal::DebuggerPlugin::initialize(QStringList const&, QString*) (this=0x55cc698379c0, arguments=..., errorMessage=0x7ffd6caf88b0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/debugger/debuggerplugin.cpp:2127
      #17 0x00007fc0d6408869 in ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() (this=0x55cc6979c9b0) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/extensionsystem/pluginspec.cpp:1056
      #18 0x00007fc0d63e9728 in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) (this=0x55cc69471c00, spec=0x55cc69795640, destState=ExtensionSystem::PluginSpec::Initialized) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/extensionsystem/pluginmanager.cpp:1639
      #19 0x00007fc0d63e7a13 in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() (this=0x55cc69471c00) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/extensionsystem/pluginmanager.cpp:1366
      #20 0x00007fc0d63e1327 in ExtensionSystem::PluginManager::loadPlugins() () at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/libs/extensionsystem/pluginmanager.cpp:338
      #21 0x000055cc691eadc6 in main(int, char**) (argc=3, argv=0x7ffd6caf8e88) at /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/app/main.cpp:724
      

      Other threads look unspectacular:

      Thread 10 (Thread 0x7fc088c17640 (LWP 3703085) "QDBusConnection"):
      #0  0x00007fc0d464ab2f in poll () at /usr/lib/libc.so.6
      #1  0x00007fc0d3286b29 in  () at /usr/lib/libglib-2.0.so.0
      #2  0x00007fc0d3230871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
      #3  0x00007fc0d4dccfd6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #4  0x00007fc0d4d72d1c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #5  0x00007fc0d4b87e12 in QThread::exec() () at /usr/lib/libQt5Core.so.5
      #6  0x00007fc0d0a50ae8 in  () at /usr/lib/libQt5DBus.so.5
      #7  0x00007fc0d4b88fef in  () at /usr/lib/libQt5Core.so.5
      #8  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #9  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 9 (Thread 0x7fc089450640 (LWP 3703084) "Qt bearer threa"):
      #0  0x00007fc0d464ab2f in poll () at /usr/lib/libc.so.6
      #1  0x00007fc0d3286b29 in  () at /usr/lib/libglib-2.0.so.0
      #2  0x00007fc0d3230871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
      #3  0x00007fc0d4dccfd6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #4  0x00007fc0d4d72d1c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #5  0x00007fc0d4b87e12 in QThread::exec() () at /usr/lib/libQt5Core.so.5
      #6  0x00007fc0d4b88fef in  () at /usr/lib/libQt5Core.so.5
      #7  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #8  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 8 (Thread 0x7fc0c13b7640 (LWP 3703082) "QThread"):
      #0  0x00007fc0d464ab2f in poll () at /usr/lib/libc.so.6
      #1  0x00007fc0d3286b29 in  () at /usr/lib/libglib-2.0.so.0
      #2  0x00007fc0d3230871 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
      #3  0x00007fc0d4dccfd6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #4  0x00007fc0d4d72d1c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #5  0x00007fc0d4b87e12 in QThread::exec() () at /usr/lib/libQt5Core.so.5
      #6  0x00007fc0d4b88fef in  () at /usr/lib/libQt5Core.so.5
      #7  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #8  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 7 (Thread 0x7fc0c1c63640 (LWP 3703081) "qtcreato:gdrv0"):
      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9270 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      #2  0x00007fc0ca52353c in  () at /usr/lib/dri/iris_dri.so
      #3  0x00007fc0ca51d598 in  () at /usr/lib/dri/iris_dri.so
      #4  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #5  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 6 (Thread 0x7fc0c2484640 (LWP 3703080) "qtcreat:disk$3"):
      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9270 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      #2  0x00007fc0ca52353c in  () at /usr/lib/dri/iris_dri.so
      #3  0x00007fc0ca51d598 in  () at /usr/lib/dri/iris_dri.so
      #4  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #5  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 5 (Thread 0x7fc0c2c85640 (LWP 3703079) "qtcreat:disk$2"):
      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9270 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      #2  0x00007fc0ca52353c in  () at /usr/lib/dri/iris_dri.so
      #3  0x00007fc0ca51d598 in  () at /usr/lib/dri/iris_dri.so
      #4  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #5  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      Thread 4 (Thread 0x7fc0c3486640 (LWP 3703078) "qtcreat:disk$1"):
      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9270 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      --Type <RET> for more, q to quit, c to continue without paging--
      #2  0x00007fc0ca52353c in  () at /usr/lib/dri/iris_dri.so
      #3  0x00007fc0ca51d598 in  () at /usr/lib/dri/iris_dri.so
      #4  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #5  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 3 (Thread 0x7fc0c3c87640 (LWP 3703077) "qtcreat:disk$0"):
      #0  0x00007fc0d4aaf8ca in __futex_abstimed_wait_common64 () at /usr/lib/libpthread.so.0
      #1  0x00007fc0d4aa9270 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
      #2  0x00007fc0ca52353c in  () at /usr/lib/dri/iris_dri.so
      #3  0x00007fc0ca51d598 in  () at /usr/lib/dri/iris_dri.so
      #4  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #5  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      Thread 2 (Thread 0x7fc0d08ad640 (LWP 3703076) "QXcbEventQueue"):
      #0  0x00007fc0d464ab2f in poll () at /usr/lib/libc.so.6
      #1  0x00007fc0d0f9e63b in  () at /usr/lib/libxcb.so.1
      #2  0x00007fc0d0fa037b in xcb_wait_for_event () at /usr/lib/libxcb.so.1
      #3  0x00007fc0d0b7cf21 in  () at /usr/lib/libQt5XcbQpa.so.5
      #4  0x00007fc0d4b88fef in  () at /usr/lib/libQt5Core.so.5
      #5  0x00007fc0d4aa3259 in start_thread () at /usr/lib/libpthread.so.0
      #6  0x00007fc0d46555e3 in clone () at /usr/lib/libc.so.6
      
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jkobus Jarek Kobus
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes